fixed: FramedModel